Updated all uses of class to className This was causing issues of bootstrap styling not working Make heart visible again according to bootstrap style

--- a/RecipeBookWeb/src/App.scss
+++ b/RecipeBookWeb/src/App.scss
@@ -14,6 +14,16 @@ $theme-colors: (
   "color6": $color6
 );
 
+.center-vertical{
+  @extend .d-flex;
+  @extend .align-items-center;
+}
+
+.center-horizontal{
+  @extend .d-flex;
+  @extend .justify-content-center;
+}
+
 .center-content{
   @extend .d-flex;
   @extend .align-items-center;
